# pio

./: app.py  pyproject.toml  ruff.toml
src/pio/: __init__.py  aio.py  bus.py  scheduler.py  typing.py
src/pio/subsystems/: echo.py  function.py
tests/: test_aio.py  test_scheduler.py  test_system.py
